# release_tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
release_tools/: delete_from_release.py  download_from_release.py  execute_bash.py  generate_lists.py  upload_to_release.py  utils.py
